# clicky

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  flake.nix  fly.toml
src/: config.rs  events.rs  main.rs
src/clickup/: actions.rs  auth.rs  list.rs  mod.rs  task.rs  team.rs  webhooks.rs
src/github/: mod.rs
